--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the lists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ h1 {
+   color: blue;
+   font-size: 13pt;
+ }
+
+ div p {
+  color: purple;
+ }
+
+
+
