--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,3 +1,11 @@
-<% @lists.each do |list| %>
-  <%= list.name %>
-  <% end %>
+<h1>Lists</h1>
+<table class='table table-striped'>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Actions</th>
+    </thead>
+    <tbody>
+      <%= render @lists %>
+    </tbody
+</table>
