updated with destroy action.

--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -1,8 +1,7 @@
 <tr>
   <td><%= list.name %></td>
   <td>
-    <%= link_to 'Show', list_url(list), class: 'button button-success' %>
-    <%= link_to 'Edit', edit_list_url(list), class: 'button button-success' %> 
+    <%= link_to 'Show', list_url(list), class: 'button button-success btn-sm' %>
+    <%= link_to 'Edit', edit_list_url(list), class: 'button button-success btn-sm' %>
   </td>
 </tr>
-
