--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,6 +1,10 @@
 <tr>
   <td><%= item.name %></td>
   <td><%= time_ago_in_words(item.created_at)%> ago</td>
-
+  <td>
+    <%= link_to 'Destroy', list_item_url(item, list_id: item.list_id), method: :delete, class: 'checkbox btn-sm' %>
+  </td>
 </tr>
+
+
 
