--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @list.name %></h1>
-<table class='table table-striped'>
+<table class='table table-striped table-hover'>
   <tbody>
     <%= render @list.items %> 
   </tbody>
